--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,10 +8,10 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/topicText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Activity 1"
+        android:text="@string/app_name"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -26,9 +26,10 @@
         android:layout_marginStart="160dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="161dp"
+        android:backgroundTint="#009688"
         android:text="Move to Activity2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/topicText" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
