naming and fun correction

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,28 +7,27 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-<!--    TODO rename ids-->
     <TextView
-        android:id="@+id/topicText"
+        android:id="@+id/topic_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/app_name"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_margin="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/fragmentContainer"
+        android:layout_marginTop="40dp"
+        app:layout_constraintBottom_toTopOf="@+id/fragment_сontainer"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         />
 
     <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fragmentContainer"
+        android:id="@+id/fragment_сontainer"
         android:name="com.example.androidstudy.LoginFragment"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/topicText"
+        app:layout_constraintTop_toBottomOf="@+id/topic_text"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
