--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -8,12 +8,13 @@
 
     <EditText
         android:background="@drawable/shaped_edit_text"
-        android:layout_width="201dp"
-        android:layout_height="44dp"
-        android:layout_marginStart="32dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:layout_marginEnd="32dp"
-        android:paddingLeft="5dp"
+        android:layout_marginHorizontal="100dp"
+        android:paddingStart="10dp"
+
+        android:paddingEnd="15dp"
         android:hint="ShapedTextField"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
